--- a/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
@@ -381,6 +381,50 @@ soit en déposant votre devoir durant le cours
             \end{tabular}
         \end{center}
         Il ne resterait plus qu'à faire rentrer \(x_5\) pour obtenir la solution optimale mais on a aucune variable qui correspond à un critère d'entrée, elles sont toutes negatives. Donc \(x_5\) ne peut pas rentrer en base et le problème est non borné.
+
+        \item On passe à la partie difficile.
+
+        \begin{enumerate}
+            \item On commence par passer toutes les contraintes sous forme \(\leq\):
+            \begin{equation*}
+                \begin{cases}
+                    \max z = 5x_1 + 2x_2 \\
+                    -6x_1 - x_2 \leq -6 \\
+                    -4x_1 - 4x_2 \leq -12 \\
+                    -x_1 - 2x_2 \leq -4 \\
+                    x_i \geq 0, \quad \forall i \in \{1,2\}
+                \end{cases}
+            \end{equation*}
+            On n'a plus que des contraintes de type \(\leq\) donc on a plus qu'à rajouter les variables d'écart, pas de variable artificielle nécessaire. Le problème devient:
+            \begin{equation*}
+                \begin{cases}
+                    \max z = 5x_1 + 2x_2 + 0x_3 + 0x_4 + 0x_5 \\
+                    -6x_1 - x_2 + x_3 = -6 \\
+                    -4x_1 - 4x_2 + x_4 = -12 \\
+                    -x_1 - 2x_2 + x_5 = -4 \\
+                    x_i \geq 0, \quad \forall i \in \{1,\ldots,5\}
+                \end{cases}
+            \end{equation*}
+            Enfin, on construit le tableau initial:
+            \begin{center}
+                \begin{tabular}{|ccc|ccccc|} % chktex 44
+                    \hline  % chktex 44
+                    & \ &\(c\)&\(5\)&\(2\)&\(0\)&\(0\)&\(0\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)&\(x_5\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_1^{1}=x_3\)} &\(-6\)&\(-6\)&\(-1\)&\(1\)&\(0\)&\(0\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_2^{1}=x_4\)} &\(-12\)&\(-4\)&\(-4\)&\(0\)&\(1\)&\(0\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_3^{1}=x_5\)} &\(-4\)&\(-1\)&\(-2\)&\(0\)&\(0\)&\(1\)\\
+                    \hline % chktex 44
+                    \multicolumn{1}{|c|}{} &\(z(x)\)& \multicolumn{1}{|c|}{\(0\)} &\(-5\)&\(-2\)&\(0\)&\(0\)&\(0\)\\
+                    \hline % chktex 44
+                \end{tabular}
+            \end{center}
+            On a ni une solution de base réalisable pour le dual ni une solution de base réalisable pour le primal car tous les termes sont négatifs. Donc on n'a pas de solution de base avec la méthode du dual simplexe et on ne peut pas chercher une solution au problème \(P_\beta\).
+        \end{enumerate}
     \end{enumerate}
 \end{td-sol}
 
