--- a/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
+++ b/src/HAI722I_Recherche_Operationnelle/dms/dm_1.tex
@@ -767,7 +767,7 @@ soit en déposant votre devoir durant le cours
 
                 \item Afficher les temps de calcul en fonction de \(n\).
 
-                \item Vérifier que les temps de calcul sibt similaires à \(\mathsf{O}(2^n)\)
+                \item Vérifier que les temps de calcul sont similaires à \(\mathsf{O}(2^n)\)
             \end{enumerate}
         \end{enumerate}
     \end{td-exo}
